--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,15 +4,31 @@ services:
     # command: "sleep 1000"
     # command: "poetry run python /src/test_project/funcs.py"
     build: .
-    volumes:
-      - ./src/test_project:/src/test_project
+    # volumes:
+    #   - ./src/test_project:/src/test_project
       # - ./src/test_project:/src/test_project
       # - ./entrypoint.sh:/entrypoint.sh
       # - ./poetry.lock:/app/poetry.lock
       # - ./pyproject.toml:/app/pyproject.toml
     ports:
-      - "80:80"
+      - "8000:8000"
+    depends_on:
+      - db
     # entrypoint:
     #   /entrypoint.sh
-
-    # poetry run uvicorn src.test_project.funcs:app --host 0.0.0.0 --port 80
+    # poetry run uvicorn src.test_project.funcs:app --host 0.0.0.0 --port 8000
+  db:
+    image: mysql
+    # NOTE: use of "mysql_native_password" is not recommended: https://dev.mysql.com/doc/refman/8.0/en/upgrading-from-previous-series.html#upgrade-caching-sha2-password
+    # (this is just an example, not intended to be a production configuration)
+    command: --default-authentication-plugin=mysql_native_password
+    restart: always
+    environment:
+      MYSQL_ROOT_PASSWORD: example
+      MYSQL_USER: admin
+      MYSQL_PASSWORD: admin
+      MYSQL_DATABASE: dev
+    ports:
+      - "3306:3306"
+    volumes:
+      - ./db/init.sql:/docker-entrypoint-initdb.d/init.sql
