--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,8 @@ python-jose = {extras = ["cryptography"], version = "^3.3.0"}
 passlib = {extras = ["bcrypt"], version = "^1.7.4"}
 mysql-connector-python = "^8.0.33"
 python-multipart = "^0.0.6"
+install = "^1.3.5"
+psycopg2-binary = "^2.9.6"
 
 [build-system]
 requires = ["poetry-core"]
