--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,8 @@ mysql-connector-python = "^8.0.33"
 python-multipart = "^0.0.6"
 install = "^1.3.5"
 psycopg2-binary = "^2.9.6"
+pika = "^1.3.2"
+tarantool = "^1.0.0"
 
 [build-system]
 requires = ["poetry-core"]
