--- a/dialog_ms/pyproject.toml
+++ b/dialog_ms/pyproject.toml
@@ -1,12 +1,12 @@
 [tool.poetry]
-name = "test_project"
+name = "dialog_ms"
 version = "0.1.0"
 description = ""
 authors = ["Your Name <you@example.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "3.8.10"
+python = "3.8.2"
 pandas = "1.5.2"
 fastapi = "^0.88.0"
 uvicorn = {extras = ["standart"], version = "^0.20.0"}
@@ -19,7 +19,6 @@ install = "^1.3.5"
 psycopg2-binary = "^2.9.6"
 pika = "^1.3.2"
 tarantool = "^1.0.0"
-requests = "^2.31.0"
 
 [build-system]
 requires = ["poetry-core"]
