--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ psycopg2-binary = "^2.9.6"
 pika = "^1.3.2"
 tarantool = "^1.0.0"
 requests = "^2.31.0"
+redis = "^4.6.0"
 
 [build-system]
 requires = ["poetry-core"]
