--- a/counter_ms/Dockerfile
+++ b/counter_ms/Dockerfile
@@ -8,7 +8,7 @@ RUN cd app \
     && pip install poetry \
     && poetry install
 
-CMD ["poetry", "run", "uvicorn", "src.dialog_ms.funcs:app", "--reload", "--host", "0.0.0.0", "--port", "12345"]
+CMD ["poetry", "run", "uvicorn", "src.counter_ms.funcs:app", "--reload", "--host", "0.0.0.0", "--port", "12346"]
 # CMD ["sleep", "1000"]
 
 WORKDIR /app
