--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -186,11 +186,11 @@ services:
   #     - pgmaster2
   #     - pgmaster3
 
-  # rabbitmq:
-  #   image: rabbitmq:3-management
-  #   ports:
-  #     - 5672:5672
-  #     - 15672:15672
+  rabbitmq:
+    image: rabbitmq:3-management
+    ports:
+      - 5672:5672
+      - 15672:15672
 
   # tarantool:
   #   container_name: mytarantool
